# temp-assign_hello-assign_hello-2

./: README.md  hello.py  pyproject.toml
.github/workflows/: _classroom.yml  classroom.yml
_test/: __init__.py
_test/meta/: __init__.py
test/: .cs50.yaml  checks.py
