[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_project"
version = "0.1.0"
description = "Example including /test package"
authors = [{ name = "Author", email = "author@example.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["test*"]
